#+TITLE: Changelog

* Unreleased
** Added
*** alias: `:lib/component-repl` REPL workflow for Component library
*** alias: `:lib/integrant-repl` REPL workflow for Integrant library
*** alias: `:inspect/morse` new in-process inspect tool (using the REBL JavaFX UI)
** Changed
*** DEPRECATED: `:lib/reloaded` & `:lib/tools-ns` - use `:dev/reloaded`
*** DEPRECATED: `lib/nrepl` little value without a `:main-opts` configuration
*** DEPRECATED: `:repl/rebel-cljs`, `:repl/figwheel`, `:repl/rebel-cljs` requires JVM with Nashorn, i.e. Java 8 - use figwheel-main template and [[https://practical.li/spacemacs/clojure-repl/clojurescript-repl/][Practicalli ClojureScript project workflow]]
*** docs: `lib/hotload` for Clojure 1.11 and uses [[https://github.com/clojure/tools.deps.alpha/tree/add-lib3][clojure/tools.deps.alpha]] which has been replaced for Clojure 1.12
*** alias: remove clojure/tools.deps.alpha from `:repl/reloaded` & `:dev/reloaded` for use with Clojure 1.12
*** alias: remove find-deps from `:repl/reloaded` & `:dev/reloaded` as no longer required - use add-lib instead
*** docs: update introduction and remove outdated content
*** aliases: use `--main` option in alias `:main-opts` definitions for greater clarity
*** alias: `:repl/rebel` load Clojure 1.12 hotload functions during REPL startup
** Updated
*** ci: updated GitHub workflow and configuration to standand used in other Practicalli projects
*** Update library versions using `clojure -T:search/outdated`

  | :name                                | :current                                 | :latest                                  |
  |--------------------------------------+------------------------------------------+------------------------------------------|
  | clojurians-zulip/feeds               | ba8fe2b7f3415334a73c1ccc6077eafb05e43c5b | dc0ed3f14bcc2f6344492782220313427bc5c8bf |
  | com.github.jpmonettas/flow-storm-dbg | 3.4.1                                    | 3.5.1                                    |